--- a/kurt.ipynb
+++ b/kurt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,6 +47,110 @@
     "    \"train_outpatient-data\" : train_outpatient,\n",
     "    \"train_data\" : train_data\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_inpatient = train_inpatient[['Provider','InscClaimAmtReimbursed',\"ClmDiagnosisCode_1\",\"ClmProcedureCode_1\"]]\n",
+    "train_inpatient.rename(columns = {\n",
+    "    \"Provider\" : \"provider\",\n",
+    "    \"InscClaimAmtReimbursed\" : \"insurance_claim\",\n",
+    "    \"ClmDiagnosisCode_1\" : \"diagnosis_code\",\n",
+    "    \"ClmProcedureCode_1\" : \"procedure_code\"\n",
+    "}, inplace=True)\n",
+    "train_inpatient.head(10).to_html(buf=\"inpatient.html\",table_id=\"inpatient\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_outpatient = train_outpatient[['Provider','InscClaimAmtReimbursed',\"ClmDiagnosisCode_1\",\"ClmProcedureCode_1\"]]\n",
+    "train_outpatient.rename(columns = {\n",
+    "    \"Provider\" : \"provider\",\n",
+    "    \"InscClaimAmtReimbursed\" : \"insurance_claim\",\n",
+    "    \"ClmDiagnosisCode_1\" : \"diagnosis_code\",\n",
+    "    \"ClmProcedureCode_1\" : \"procedure_code\"\n",
+    "}, inplace=True)\n",
+    "train_outpatient.head(10).to_html(buf=\"outpatient.html\",table_id=\"outpatient\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.rename(columns={\n",
+    "    \"Provider\" : \"provider\",\n",
+    "    \"PotentialFraud\" : \"potential_fraud\"\n",
+    "},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "Index(['BeneID', 'DOB', 'DOD', 'Gender', 'Race', 'RenalDiseaseIndicator',\n       'State', 'County', 'NoOfMonths_PartACov', 'NoOfMonths_PartBCov',\n       'ChronicCond_Alzheimer', 'ChronicCond_Heartfailure',\n       'ChronicCond_KidneyDisease', 'ChronicCond_Cancer',\n       'ChronicCond_ObstrPulmonary', 'ChronicCond_Depression',\n       'ChronicCond_Diabetes', 'ChronicCond_IschemicHeart',\n       'ChronicCond_Osteoporasis', 'ChronicCond_rheumatoidarthritis',\n       'ChronicCond_stroke', 'IPAnnualReimbursementAmt',\n       'IPAnnualDeductibleAmt', 'OPAnnualReimbursementAmt',\n       'OPAnnualDeductibleAmt'],\n      dtype='object')"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "beneficiary_data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beneficiary_data = beneficiary_data[[\"BeneID\",\"State\",\"County\"]]\n",
+    "beneficiary_data.rename(columns={\n",
+    "    \"BeneID\" : \"beneficiary\",\n",
+    "    \"State\" : \"state\",\n",
+    "    \"County\" : \"county\"\n",
+    "}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beneficiary_data.head(10).to_html(buf=\"beneficiary.html\",table_id=\"beneficiary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.head(10).to_html(buf=\"potential_fraud.html\",table_id=\"potential_fraud\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#train_outpatient.head(10).to_html(buf=\"outpatient.html\",table_id=\"outpatient\")"
    ]
   },
   {
@@ -3533,7 +3637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.10-final"
   }
  },
  "nbformat": 4,
